syntax="proto3";

option java_package = "brex.lsp.proto";

// Encapsulates the information about the artifacts required by the Kotlin LSP from a bazel build
message BazelKotlinLspInfo {
    // The root of the workspace
    string workspace_root = 1;

    // If bzlmod is enabled or workspce is to be used
    string bzlmod_enabled = 2;

    // One or more classpath entries
    repeated ClassPathEntry classpath = 3;

    // One or more compile jar bytecode information
    repeated CompileJarBytecodeInfo bytecode_info = 4;

    // A list of source files that the LSP will track for compilation
    repeated SourceFile source_files = 5;
}

message SourceFile {
    // relative path to the source file
    string path = 1;

    // the bazel target to which the source file belongs to
    string bazel_target = 2;
}

message ClassPathEntry {
    // The name of the bazel package
    string package_name = 1;

    // The bazel target label
    string bazel_target = 2;

    // The path to the compile jar relative to the workspace
    string compile_jar = 3;

    // The path to the source jar relative to the workspace
    string source_jar = 4;
}

message CompileJarBytecodeInfo {
    // The path to the compile jar
    string compile_jar = 1;

    // The bytecode information
    repeated ClassFileInfo class_file_info = 2;
}

message ClassFileInfo {
    // The fully qualified JVM class name
    string class_name = 1;

    // The package name of the class
    string package_name = 2;

    // The path to the class file within the jar
    string relative_path = 3;

    // One or more functions in the class
    repeated FunctionInfo function_info = 4;

    // The corresponding source jar for this class
    string source_jar = 5;
}

message FunctionInfo {
    // The name of the function
    string name = 1;

    // If the function is inline
    bool is_inline = 2;

    // If the function is an extension function
    bool is_extension = 3;

}

